--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node_modules/
 # Real key file should not be checked in
 test/resources/key.json
 test/resources/apikey.txt
+test/resources/appid.txt
 
 # Release tarballs should not be checked in
 firebase-admin-*.tgz
