--- a/package.json
+++ b/package.json
@@ -176,7 +176,7 @@
     "@firebase/database-compat": "^0.2.0",
     "@firebase/database-types": "^0.9.7",
     "@types/node": ">=12.12.47",
-    "dicer": "^0.3.0",
+    "@fastify/busboy": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.2",
     "node-forge": "^1.3.1",
