--- a/package.json
+++ b/package.json
@@ -205,8 +205,8 @@
   },
   "dependencies": {
     "@fastify/busboy": "^3.0.0",
-    "@firebase/database-compat": "^1.0.2",
-    "@firebase/database-types": "^1.0.0",
+    "@firebase/database-compat": "1.0.8",
+    "@firebase/database-types": "1.0.5",
     "@types/node": "^22.0.1",
     "farmhash-modern": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
