--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "@firebase/database-types": "1.0.5",
     "@types/node": "^22.0.1",
     "farmhash-modern": "^1.1.0",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.1.0",
     "node-forge": "^1.3.1",
