--- a/package.json
+++ b/package.json
@@ -205,24 +205,24 @@
   },
   "dependencies": {
     "@fastify/busboy": "^3.0.0",
-    "@firebase/database-compat": "1.0.8",
-    "@firebase/database-types": "1.0.5",
-    "@types/node": "^22.0.1",
+    "@firebase/database-compat": "^2.0.0",
+    "@firebase/database-types": "^1.0.6",
+    "@types/node": "^22.8.7",
     "farmhash-modern": "^1.1.0",
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.1.0",
     "node-forge": "^1.3.1",
-    "uuid": "^10.0.0"
+    "uuid": "^11.0.2"
   },
   "optionalDependencies": {
-    "@google-cloud/firestore": "^7.7.0",
-    "@google-cloud/storage": "^7.7.0"
+    "@google-cloud/firestore": "^7.10.0",
+    "@google-cloud/storage": "^7.14.0"
   },
   "devDependencies": {
     "@firebase/api-documenter": "^0.4.0",
     "@firebase/app-compat": "^0.2.1",
-    "@firebase/auth-compat": "^0.4.1",
+    "@firebase/auth-compat": "^0.5.13",
     "@firebase/auth-types": "^0.12.0",
     "@microsoft/api-extractor": "^7.11.2",
     "@types/bcrypt": "^5.0.0",
@@ -239,8 +239,8 @@
     "@types/sinon": "^17.0.2",
     "@types/sinon-chai": "^3.0.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "bcrypt": "^5.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.0.0",
@@ -248,7 +248,7 @@
     "chalk": "^4.1.1",
     "child-process-promise": "^2.2.1",
     "del": "^6.0.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.56.0",
     "firebase-token-generator": "^2.0.0",
     "gulp": "^5.0.0",
     "gulp-filter": "^7.0.0",
@@ -268,7 +268,7 @@
     "sinon": "^18.0.0",
     "sinon-chai": "^3.0.0",
     "ts-node": "^10.2.0",
-    "typescript": "5.1.6",
+    "typescript": "5.5.4",
     "yargs": "^17.0.1"
   }
 }
